# autometrics

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  docker-compose.yml  pyproject.toml
dashboard/: app.py
src/autometrics/: __init__.py  main.py
src/autometrics/api/v1/: health.py  root.py  routes.py
src/autometrics/core/: config.py  logging.py
src/autometrics/services/: ingestion.py  metrics.py
